<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>nus.edu.u</groupId>
	<artifactId>ChronoFlow</artifactId>
	<version>${revision}</version>

	<name>ChronoFlow</name>
	<description>ChronoFlow-For individual event management</description>


	<properties>
		<java.version>17</java.version>
		<revision>1.0.1</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
		<spring-boot.version>3.4.1</spring-boot.version>
		<mybatis-plus.version>3.5.5</mybatis-plus.version>
		<mysql.version>9.1.0</mysql.version>
		<fastjson.version>2.0.57</fastjson.version>
		<commons.io.version>2.19.0</commons.io.version>
		<poi.version>4.1.2</poi.version>
		<jwt.version>0.9.1</jwt.version>
		<guava.version>33.4.0-jre</guava.version>
		<jakarta-validation.version>3.0.2</jakarta-validation.version>
		<redisson.version>3.41.0</redisson.version>
		<springdoc.version>2.7.0</springdoc.version>
		<lombok.version>1.18.34</lombok.version>
		<hutool.version>5.8.35</hutool.version>
		<satoken.version>1.44.0</satoken.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<easyexcel.version>3.3.2</easyexcel.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- SpringBoot-->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- SQL connector -->
			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${mysql.version}</version>
			</dependency>

			<!-- MyBatis-Plus -->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-spring-boot3-starter</artifactId>
				<version>${mybatis-plus.version}</version>
			</dependency>

			<!-- Google Utils -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<!-- swagger 3 -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<!-- validation annotation -->
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta-validation.version}</version>
			</dependency>

			<!-- client of redis -->
			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson-spring-boot-starter</artifactId>
				<version>${redisson.version}</version>
			</dependency>

			<!-- Alibaba JSON parser -->
			<dependency>
				<groupId>com.alibaba.fastjson2</groupId>
				<artifactId>fastjson2</artifactId>
				<version>${fastjson.version}</version>
			</dependency>

			<!-- hutool utils -->
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>${hutool.version}</version>
			</dependency>

			<!-- io Utils -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<!-- excel Utils -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- Lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>

			<!-- mapstruct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<!-- sa-token -->
			<dependency>
				<groupId>cn.dev33</groupId>
				<artifactId>sa-token-spring-boot3-starter</artifactId>
				<version>${satoken.version}</version>
			</dependency>

			<dependency>
				<groupId>cn.dev33</groupId>
				<artifactId>sa-token-redis-template</artifactId>
				<version>${satoken.version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>easyexcel</artifactId>
				<version>${easyexcel.version}</version>
			</dependency>

			<!-- Framework module -->
			<dependency>
				<groupId>nus.edu.u</groupId>
				<artifactId>framework</artifactId>
				<version>${revision}</version>
			</dependency>

			<!-- System module -->
			<dependency>
				<groupId>nus.edu.u</groupId>
				<artifactId>system</artifactId>
				<version>${revision}</version>
			</dependency>

			<!-- Common module -->
			<dependency>
				<groupId>nus.edu.u</groupId>
				<artifactId>common</artifactId>
				<version>${revision}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
				</plugin>
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>2.43.0</version>
					<configuration>
						<java>
							<googleJavaFormat>
								<style>AOSP</style>
							</googleJavaFormat>
						</java>
					</configuration>
					<executions>
						<execution>
							<id>spotless-check</id>
							<goals><goal>check</goal></goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.3.1</version>
					<configuration>
						<configLocation>google_checks.xml</configLocation>
						<consoleOutput>true</consoleOutput>
						<failOnViolation>true</failOnViolation>
					</configuration>
					<executions>
						<execution>
							<id>checkstyle-verify</id>
							<phase>verify</phase>
							<goals><goal>check</goal></goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<fork>true</fork>
						<annotationProcessorPaths>
							<!-- MapStruct 注解处理器 -->
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<!-- Lombok 注解处理器（如果用了 Lombok） -->
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok-mapstruct-binding</artifactId>
								<version>0.2.0</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
						<warName>${project.artifactId}</warName>
					</configuration>
				</plugin>

				<plugin>
      <groupId>org.jacoco</groupId>
      <artifactId>jacoco-maven-plugin</artifactId>
      <version>0.8.12</version>
      <inherited>true</inherited>

      <configuration>
        <excludes>
          <exclude>**/generated/**</exclude>
          <exclude>**/*Generated*</exclude>
          <exclude>**/*MapperImpl.class</exclude>
        </excludes>
      </configuration>

      <executions>
        <execution>
          <id>prepare-agent</id>
          <goals>
            <goal>prepare-agent</goal>
          </goals>
          <configuration>
            <excludes>
              <exclude>**/generated/**</exclude>
              <exclude>**/*Generated*</exclude>
              <exclude>**/*MapperImpl.class</exclude>
            </excludes>
          </configuration>
        </execution>

        <execution>
          <id>report</id>
          <phase>verify</phase>
          <goals>
            <goal>report</goal>
          </goals>
          <configuration>
            <excludes>
              <exclude>**/generated/**</exclude>
              <exclude>**/*Generated*</exclude>
              <exclude>**/*MapperImpl.class</exclude>
            </excludes>
          </configuration>
        </execution>

        <execution>
          <id>report-aggregate</id>
          <phase>verify</phase>
          <goals>
            <goal>report-aggregate</goal>
          </goals>
          <configuration>
            <excludes>
              <exclude>**/generated/**</exclude>
              <exclude>**/*Generated*</exclude>
              <exclude>**/*MapperImpl.class</exclude>
            </excludes>
          </configuration>
        </execution>
      </executions>
    </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<inherited>false</inherited>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>framework</module>
		<module>system</module>
		<module>common</module>
	</modules>
	<packaging>pom</packaging>

</project>
